Fixing field title alignments

--- a/bwma_rubik_style.scss
+++ b/bwma_rubik_style.scss
@@ -2479,7 +2479,7 @@ input.form-submit {
             min-width: 0;
           }
 
-          .views-field-title-field, .views-field-title-field p {
+          .views-field-title, .views-field-title p {
             text-align: center;
           }
 
@@ -2610,8 +2610,8 @@ input.form-submit {
         }
 
         .views-field-field-featured-image,
-        .views-field-title-field, 
-        .views-field-title-field p {
+        .views-field-title, 
+        .views-field-title p {
           text-align: center;
           
           h3 {
@@ -2667,8 +2667,8 @@ input.form-submit {
     }
   }
 
-  .views-field-title-field p,
-  .views-field-title-field h2 {
+  .views-field-title p,
+  .views-field-title h2 {
     text-align: center;
     margin: 0;
   }
